# ddns-rs

./: .clippy.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: factory.rs  main.rs  setting.rs  shutdown.rs
src/interfaces/: mod.rs  peer.rs  stock.rs
src/notifiers/: email.rs  mod.rs  webhook.rs
src/providers/: cloudflare.rs  fake.rs  godaddy.rs  mod.rs
