[package]
name = "ddns-rs"
version = "0.1.1"
edition = "2018"
authors = ["Honsun Zhu <honsun@linux.com>"]
readme = "README.md"
keywords = ["ddns", "network", "cloudflare", "godaddy"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/ddns-rs/ddns-rs"
description = """
An easy to used program that help you update your dns record.
"""

[dependencies]
addr = "0.15"
rand = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
cloudflare = "0.9"
pnet = "0.29"
anyhow = "1"
log = "0.4"
log4rs = "1"
chrono = "0.4"
cron = "0.9"
clap = { version = "3.1", features = ["derive"] }
regex = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
path-value = "0.1"
lazy_static = "1.4.0"
lettre = { version = "0.10.0-rc.5", features = ["tokio1-native-tls"] }
maud = "0.23"
reqwest = "0.11"

[target.'cfg(unix)'.dependencies]
sd-notify = "0.3"
daemonize = "0.4"
